@@ -17,7 +17,9 @@
 package dev.terminalmc.commandkeys.gui.widget.list;
 
 import com.mojang.blaze3d.platform.InputConstants;
-import dev.terminalmc.commandkeys.config.*;
+import dev.terminalmc.commandkeys.config.Macro;
+import dev.terminalmc.commandkeys.config.Message;
+import dev.terminalmc.commandkeys.config.Profile;
 import dev.terminalmc.commandkeys.util.KeybindUtil;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
@@ -28,11 +30,10 @@ import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import org.jetbrains.annotations.NotNull;
 
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 
-import static dev.terminalmc.commandkeys.config.Macro.ConflictStrategy.*;
+import static dev.terminalmc.commandkeys.config.Macro.ConflictStrategy.AVOID;
 import static dev.terminalmc.commandkeys.config.Macro.SendMode.*;
 import static dev.terminalmc.commandkeys.util.Localization.localized;
 
@@ -40,10 +41,10 @@ public class MacroOptionList extends MacroBindList {
     private final Macro macro;
     private int dragSourceSlot = -1;
 
-    public MacroOptionList(Minecraft mc, int width, int height, int y,
+    public MacroOptionList(Minecraft mc, int width, int height, int top, int bottom,
                            int itemHeight, int entryWidth, int entryHeight,
                            Profile profile, Macro macro) {
-        super(mc, width, height, y, itemHeight, entryWidth, entryHeight, profile);
+        super(mc, width, height, top, bottom, itemHeight, entryWidth, entryHeight, profile);
         this.macro = macro;
 
         addEntry(new Entry.BindAndControlsEntry(entryX, entryWidth, entryHeight, this, profile, macro));
@@ -74,9 +75,9 @@ public class MacroOptionList extends MacroBindList {
     }
 
     @Override
-    protected OptionList reload(int width, int height, double scrollAmount) {
+    protected OptionList reload(int width, int height, int top, int bottom, double scrollAmount) {
         MacroOptionList newListWidget = new MacroOptionList(minecraft, width, height,
-                getY(), itemHeight, entryWidth, entryHeight, profile, macro);
+                top, bottom, itemHeight, entryWidth, entryHeight, profile, macro);
         newListWidget.setScrollAmount(scrollAmount);
         return newListWidget;
     }
@@ -96,8 +97,8 @@ public class MacroOptionList extends MacroBindList {
     // Message dragging
 
     @Override
-    public void renderWidget(@NotNull GuiGraphics graphics, int mouseX, int mouseY, float delta) {
-        super.renderWidget(graphics, mouseX, mouseY, delta);
+    public void render(@NotNull GuiGraphics graphics, int mouseX, int mouseY, float delta) {
+        super.render(graphics, mouseX, mouseY, delta);
         if (dragSourceSlot != -1) {
             super.renderItem(graphics, mouseX, mouseY, delta, dragSourceSlot,
                     mouseX, mouseY, entryWidth, entryHeight);
@@ -181,7 +182,7 @@ public class MacroOptionList extends MacroBindList {
                         .create(x, 0, buttonWidth, height,
                                 localized("option", "macro.hud"),
                                 (button, status) -> profile.setShowHudMessage(macro, status));
-                hudButton.setTooltipDelay(Duration.ofMillis(500));
+                hudButton.setTooltipDelay(500);
                 hudButton.active = profile.getShowHudMessage().equals(Profile.Control.DEFER);
                 elements.add(hudButton);
 
@@ -194,7 +195,7 @@ public class MacroOptionList extends MacroBindList {
                         .create(x + width - buttonWidth, 0, buttonWidth, height,
                                 localized("option", "macro.history"),
                                 (button, status) -> profile.setAddToHistory(macro, status));
-                historyButton.setTooltipDelay(Duration.ofMillis(500));
+                historyButton.setTooltipDelay(500);
                 historyButton.active = profile.getAddToHistory().equals(Profile.Control.DEFER);
                 elements.add(historyButton);
             }
@@ -357,7 +358,7 @@ public class MacroOptionList extends MacroBindList {
                     List<Integer> values = new ArrayList<>();
                     for (int i = 0; i < macro.getMessages().size(); i++) values.add(i);
                     if (values.isEmpty()) values.add(0);
-                    if (macro.cycleIndex > values.getLast()) macro.cycleIndex = 0;
+                    if (macro.cycleIndex > values.get(values.size() - 1)) macro.cycleIndex = 0;
                     elements.add(CycleButton.<Integer>builder(
                                     (status) -> Component.literal(status.toString()))
                             .withValues(values)
@@ -419,7 +420,7 @@ public class MacroOptionList extends MacroBindList {
                     delayField.setTooltip(Tooltip.create(
                             localized("option", "key.delay.individual.tooltip"
                                     + (index == 0 ? ".first" : ".subsequent"))));
-                    delayField.setTooltipDelay(Duration.ofMillis(500));
+                    delayField.setTooltipDelay(500);
                     delayField.setMaxLength(8);
                     delayField.setResponder((val) -> {
                         // Resize
